Implemented toggling brackets

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <option value="">Select Character</option>
                 </select>
             </div>
+            <button id="toggleFromBracketsButton" disabled>Toggle Brackets</button>
         </div>
         <div class="column" id="copyTo">
             <h2>Copy To</h2>
@@ -84,6 +85,7 @@
                     <option value="">Select Character</option>
                 </select>
             </div>
+            <button id="toggleToBracketsButton" disabled>Toggle Brackets</button>
         </div>
     </div>
     <button id="copyButton" disabled>Copy</button>
